03-k8s-clusters/onprem/overlays/internal-gateway/routes-monitoring.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    # Grafana UI를 Internal Gateway 뒤에 둡니다.
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: internal
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - grafana.onprem.arpa
  rules:
    - backendRefs:
        - name: grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    # Prometheus server UI를 Internal Gateway 뒤에 둡니다.
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: internal
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - prometheus.onprem.arpa
  rules:
    - backendRefs:
        - name: prometheus-server
          port: 80
